events retriever