@@ -1,11 +1,16 @@
 package org.magic.api.wallpaper.impl;
 
+import java.io.File;
 import java.io.IOException;
 import java.net.URL;
+import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
+import org.hsqldb.lib.FileUtil;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
@@ -15,25 +20,28 @@ import org.magic.api.beans.Wallpaper;
 import org.magic.api.interfaces.MTGCardsProvider.STATUT;
 import org.magic.api.interfaces.abstracts.AbstractWallpaperProvider;
 
-public class ArtOfMtgWallpaperProvider extends  AbstractWallpaperProvider {
+public class FilesWallpaperProvider extends  AbstractWallpaperProvider {
 
 	String url="http://www.artofmtg.com";
 	String userAgent="Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.2.13) Gecko/20101206 Ubuntu/10.10 (maverick) Firefox/3.6.13";
+	
+	public static void main(String[] args) {
+		new FilesWallpaperProvider().search("");
+	}
 	
 	@Override
 	public List<Wallpaper> search(String search) {
 		List<Wallpaper> list = new ArrayList<>();
 		try {
 			
-			Document d = Jsoup.connect(url+"/?s="+search)
-					  .userAgent(userAgent)
-					  .get();
+			Collection<File> res = FileUtils.listFiles(new File("D:\\Google Drive\\deviant\\Lord of the Rings"),new String[] {"png","jpg"},true);
 			
-			for(Element e : d.select("article.result"))
+			for(File f : res)
 			{
+				System.out.println(f);
 				Wallpaper w = new Wallpaper();
-				w.setName(e.select("h2 a").text());
-				w.setUrl(new URL(e.select("a img").attr("src")));
+				w.setName(f.getName());
+				w.setUrl(Paths.get(f.toURI()).toUri().toURL());
 				w.setFormat(FilenameUtils.getExtension(w.getUrl().toString()));
 				list.add(w);
 			}
@@ -49,28 +57,7 @@ public class ArtOfMtgWallpaperProvider extends  AbstractWallpaperProvider {
 	
 	@Override
 	public List<Wallpaper> search(MagicEdition ed) {
-		List<Wallpaper> list = new ArrayList<>();
-		try {
-			
-			Document d = Jsoup.connect(url+"/set/"+ed.getSet().toLowerCase().replaceAll(" ", "-"))
-					  .userAgent(userAgent)
-					  .get();
-			
-			for(Element e : d.select("div.elastic-portfolio-item img"))
-			{
-				Wallpaper w = new Wallpaper();
-				w.setName(e.attr("title"));
-				w.setUrl(new URL(e.attr("src")));
-				w.setFormat(FilenameUtils.getExtension(w.getUrl().toString()));
-				list.add(w);
-			}
-			return list;
-		}
-		catch (IOException e) {
-			logger.error(e);
-			return list;
-		}
-		
+		return search(ed.getSet());
 	}
 
 	@Override
@@ -80,7 +67,7 @@ public class ArtOfMtgWallpaperProvider extends  AbstractWallpaperProvider {
 
 	@Override
 	public String getName() {
-		return "Art of Mtg";
+		return "Filer";
 	}
 
 	@Override
